--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nikhil Pahan</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous" ></script>
 </head>
 <body>
     <section id="about-me">
@@ -34,6 +35,35 @@
                 </li>
             </ul>
         </nav>
+        <div class="flex flex-1">
+            <div class="about-me--info row">
+                <div class="about-me__info--container">
+                    <figure class="about-me__picture--mask">
+                        <img src="./assets/My project.jpg" class="about-me__picture" alt="picture of me">
+                    </figure>
+                    <h1 class="about-me__info--title">
+                        Hey! I'm <span class="text--purple">Nikhil Pahan</span> 👋
+                    </h1>
+                    <p class="about-me__info--para">
+                        I'm a <strong class="text--purple">frontend software engineer</strong> with a strong passion for building responsive and performant web applications with great user experiences that positively impacts the world.
+                    </p>
+                    <div class="about-me__links">
+                        <a href="" class="about-me__link">
+                            <i class="fab fa-linkedin-in"></i>
+                        </a>
+                        <a href="" class="about-me__link">
+                            <i class="fab fa-github"></i>
+                        </a>
+                        <a href="" class="about-me__link">
+                            <i class="far fa-envelope"></i>
+                        </a>
+                        <a href="" class="about-me__link">
+                            <i class="fas fa-file-pdf"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 </html>
