Modified tech language section

--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
                         <figure class="language__img--wrapper">
                             <img src="https://cdn.iconscout.com/icon/free/png-256/javascript-1-225993.png" alt="HTML5" class="language__img">
                         </figure>
-                        <span class="language__name">JAVASCRIPT</span>
+                        <span class="language__name">JavaScript</span>
                     </div>
                     <div class="language">
                         <figure class="language__img--wrapper">
                             <img src="https://cdn.iconscout.com/icon/free/png-256/typescript-3521774-2945272.png" alt="HTML5" class="language__img">
                         </figure>
-                        <span class="language__name">TYPESCRIPT</span>
+                        <span class="language__name">TypeScript</span>
                     </div>
                     <div class="language">
                         <figure class="language__img--wrapper">
@@ -113,7 +113,7 @@
                         <figure class="language__img--wrapper">
                             <img src="https://cdn.iconscout.com/icon/free/png-256/react-3-1175109.png" alt="HTML5" class="language__img">
                         </figure>
-                        <span class="language__name">REACT</span>
+                        <span class="language__name">React</span>
                     </div>
                     <div class="language">
                         <figure class="language__img--wrapper">
