--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <section id="languages">
         <div class="container">
             <div class="row">
-                <h1 class="section__title">This is my <span class="text--purple">technology stack</span></h1>
+                <h1 class="section__title">This is my <span class="text--purple">Technology Stack</span></h1>
                 <div class="language__list">
                     <div class="language">
                         <figure class="language__img--wrapper">
@@ -122,6 +122,20 @@
                         <span class="language__name">MobX</span>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+    <section id="projects">
+        <div class="container">
+            <div class="row">
+                <h1 class="section__title">Here are some of my <span class="text--purple">Projects</span></h1>
+                <ul class="project__list">
+                    <li class="project">
+                        <div class="project__wrapper">
+                            <img src="./assets/loopit.png" class="project__img" alt="">
+                        </div>
+                    </li>
+                </ul>
             </div>
         </div>
     </section>
