--- a/index.html
+++ b/index.html
@@ -1,143 +1,217 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nikhil Pahan</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous" ></script>
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/c8e4d183c2.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
     <section id="about-me">
-        <nav>
-            <div class="personal__logo">NP</div>
-            <ul class="nav__link--list">
-                <li>
-                    <a href="" class="
-                    nav__link--anchor
-                    link__hover-effect
-                    link__hover--black
-                    ">Languages</a>
-                </li>
-                <li>
-                    <a href="" class="
-                    nav__link--anchor
-                    link__hover-effect
-                    link__hover--black
-                    ">Projects</a>
-                </li>
-                <li>
-                    <a href="" class="
-                    nav__link--anchor
-                    nav__link--anchor-primary
-                    ">Contact</a>
-                </li>
-            </ul>
-        </nav>
-        <div class="flex flex-1">
-            <div class="about-me--info row">
-                <div class="about-me__info--container">
-                    <figure class="about-me__picture--mask">
-                        <img src="./assets/My project.jpg" class="about-me__picture" alt="picture of me">
-                    </figure>
-                    <h1 class="about-me__info--title">
-                        Hey! I'm <span class="text--purple">Nikhil Pahan</span> 👋
-                    </h1>
-                    <p class="about-me__info--para">
-                        I'm a <strong class="text--purple">frontend software engineer</strong> with a strong passion for building responsive and performant web applications with great user experiences that positively impacts the world.
-                    </p>
-                    <div class="about-me__links">
-                        <a href="" class="about-me__link">
-                            <i class="fab fa-linkedin-in"></i>
-                        </a>
-                        <a href="" class="about-me__link">
-                            <i class="fab fa-github"></i>
-                        </a>
-                        <a href="" class="about-me__link">
-                            <i class="far fa-envelope"></i>
-                        </a>
-                        <a href="" class="about-me__link">
-                            <i class="fas fa-file-pdf"></i>
-                        </a>
-                    </div>
-                </div>
-                <figure class="about-me__img--container">
-                    <img src="./assets/undraw_websites.svg" alt="Hero section image" class="img--hero">
-                </figure>
+      <nav>
+        <div class="personal__logo">NP</div>
+        <ul class="nav__link--list">
+          <li>
+            <a
+              href=""
+              class="nav__link--anchor link__hover-effect link__hover--black"
+              >Languages</a
+            >
+          </li>
+          <li>
+            <a
+              href=""
+              class="nav__link--anchor link__hover-effect link__hover--black"
+              >Projects</a
+            >
+          </li>
+          <li>
+            <a href="" class="nav__link--anchor nav__link--anchor-primary"
+              >Contact</a
+            >
+          </li>
+        </ul>
+      </nav>
+      <div class="flex flex-1">
+        <div class="about-me--info row">
+          <div class="about-me__info--container">
+            <figure class="about-me__picture--mask">
+              <img
+                src="./assets/My project.jpg"
+                class="about-me__picture"
+                alt="picture of me"
+              />
+            </figure>
+            <h1 class="about-me__info--title">
+              Hey! I'm <span class="text--purple">Nikhil Pahan</span> 👋
+            </h1>
+            <p class="about-me__info--para">
+              I'm a
+              <strong class="text--purple">frontend software engineer</strong>
+              with a strong passion for building responsive and performant web
+              applications with great user experiences that positively impacts
+              the world.
+            </p>
+            <div class="about-me__links">
+              <a href="" class="about-me__link">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+              <a href="" class="about-me__link">
+                <i class="fab fa-github"></i>
+              </a>
+              <a href="" class="about-me__link">
+                <i class="far fa-envelope"></i>
+              </a>
+              <a href="" class="about-me__link">
+                <i class="fas fa-file-pdf"></i>
+              </a>
             </div>
+          </div>
+          <figure class="about-me__img--container">
+            <img
+              src="./assets/undraw_websites.svg"
+              alt="Hero section image"
+              class="img--hero"
+            />
+          </figure>
         </div>
+      </div>
     </section>
     <section id="languages">
-        <div class="container">
-            <div class="row">
-                <h1 class="section__title">This is my <span class="text--purple">Technology Stack</span></h1>
-                <div class="language__list">
-                    <div class="language">
-                        <figure class="language__img--wrapper">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="HTML5" class="language__img">
-                        </figure>
-                        <span class="language__name">HTML</span>
-                    </div>
-                    <div class="language">
-                        <figure class="language__img--wrapper">
-                            <img src="https://cdn.iconscout.com/icon/free/png-256/css-131-722685.png" alt="CSS" class="language__img">
-                        </figure>
-                        <span class="language__name">CSS</span>
-                    </div>
-                    <div class="language">
-                        <figure class="language__img--wrapper">
-                            <img src="https://cdn.iconscout.com/icon/free/png-256/javascript-1-225993.png" alt="HTML5" class="language__img">
-                        </figure>
-                        <span class="language__name">JavaScript</span>
-                    </div>
-                    <div class="language">
-                        <figure class="language__img--wrapper">
-                            <img src="https://cdn.iconscout.com/icon/free/png-256/typescript-3521774-2945272.png" alt="HTML5" class="language__img">
-                        </figure>
-                        <span class="language__name">TypeScript</span>
-                    </div>
-                    <div class="language">
-                        <figure class="language__img--wrapper">
-                            <img src="https://cdn.iconscout.com/icon/free/png-256/vue-282497.png" alt="HTML5" class="language__img">
-                        </figure>
-                        <span class="language__name">VUE</span>
-                    </div>
-                    <div class="language">
-                        <figure class="language__img--wrapper">
-                            <img src="https://cdn.iconscout.com/icon/free/png-256/nuxt-dot-js-3628959-3030184.png" alt="HTML5" class="language__img">
-                        </figure>
-                        <span class="language__name">Nuxt</span>
-                    </div>
-                    <div class="language">
-                        <figure class="language__img--wrapper">
-                            <img src="https://cdn.iconscout.com/icon/free/png-256/react-3-1175109.png" alt="HTML5" class="language__img">
-                        </figure>
-                        <span class="language__name">React</span>
-                    </div>
-                    <div class="language">
-                        <figure class="language__img--wrapper">
-                            <img src="https://mobx.js.org/img/mobx.png" alt="HTML5" class="language__img">
-                        </figure>
-                        <span class="language__name">MobX</span>
-                    </div>
-                </div>
+      <div class="container">
+        <div class="row">
+          <h1 class="section__title">
+            This is my <span class="text--purple">Technology Stack</span>
+          </h1>
+          <div class="language__list">
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                  alt="HTML5"
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">HTML</span>
             </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://cdn.iconscout.com/icon/free/png-256/css-131-722685.png"
+                  alt="CSS"
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">CSS</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://cdn.iconscout.com/icon/free/png-256/javascript-1-225993.png"
+                  alt="HTML5"
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">JavaScript</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://cdn.iconscout.com/icon/free/png-256/typescript-3521774-2945272.png"
+                  alt="HTML5"
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">TypeScript</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://cdn.iconscout.com/icon/free/png-256/vue-282497.png"
+                  alt="HTML5"
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">VUE</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://cdn.iconscout.com/icon/free/png-256/nuxt-dot-js-3628959-3030184.png"
+                  alt="HTML5"
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">Nuxt</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://cdn.iconscout.com/icon/free/png-256/react-3-1175109.png"
+                  alt="HTML5"
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">React</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://mobx.js.org/img/mobx.png"
+                  alt="HTML5"
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">MobX</span>
+            </div>
+          </div>
         </div>
+      </div>
     </section>
     <section id="projects">
-        <div class="container">
-            <div class="row">
-                <h1 class="section__title">Here are some of my <span class="text--purple">Projects</span></h1>
-                <ul class="project__list">
-                    <li class="project">
-                        <div class="project__wrapper">
-                            <img src="./assets/loopit.png" class="project__img" alt="">
-                        </div>
-                    </li>
-                </ul>
-            </div>
+      <div class="container">
+        <div class="row">
+          <h1 class="section__title">
+            Here are some of my <span class="text--purple">Projects</span>
+          </h1>
+          <ul class="project__list">
+            <li class="project">
+              <div class="project__wrapper">
+                <img
+                  src="./assets/loopit.png"
+                  class="project__img"
+                  alt="Car sales project"
+                />
+                <div class="project__description">
+                  <h3 class="project__description--title">Car sales project</h3>
+                  <h4 class="project__description--sub-title">
+                    Html, Css, Javascript, Vue, Vuex
+                  </h4>
+                  <p class="project__description--para">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Laboriosam aliquam dolores nesciunt deleniti, vel est
+                    necessitatibus quas eligendi modi similique earum in quidem
+                    quam reiciendis porro iusto. Veniam, repudiandae officia!
+                  </p>
+                  <div class="project__description--links">
+                    <a href="www.github.com/yourlink" target="_blank" class="project__description--link">
+                        <i class="fab fa-github"></i>
+                    </a>
+                    <a href="www.yourwebsite.com" class="project__description--link">
+                        <i class="fab fa-link"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
         </div>
+      </div>
     </section>
-</body>
+  </body>
 </html>
