--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
                     <a href="www.github.com/yourlink" target="_blank" class="project__description--link">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="www.yourwebsite.com" class="project__description--link">
-                        <i class="fab fa-link"></i>
+                    <a href="www.google.com" class="project__description--link">
+                        <i class="fab fa-linkedin-in"></i>
                     </a>
                   </div>
                 </div>
