Working on Project section

--- a/index.html
+++ b/index.html
@@ -199,11 +199,69 @@
                     quam reiciendis porro iusto. Veniam, repudiandae officia!
                   </p>
                   <div class="project__description--links">
-                    <a href="www.github.com/yourlink" target="_blank" class="project__description--link">
+                    <a href="https://www.github.com/yourlink" target="_blank" class="project__description--link">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="www.google.com" class="project__description--link">
-                        <i class="fab fa-linkedin-in"></i>
+                    <a href="https://www.google.com" class="project__description--link">
+                        <i class="fas fa-link"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img
+                  src="./assets/loopit.png"
+                  class="project__img"
+                  alt="Car sales project"
+                />
+                <div class="project__description">
+                  <h3 class="project__description--title">Car sales project</h3>
+                  <h4 class="project__description--sub-title">
+                    Html, Css, Javascript, Vue, Vuex
+                  </h4>
+                  <p class="project__description--para">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Laboriosam aliquam dolores nesciunt deleniti, vel est
+                    necessitatibus quas eligendi modi similique earum in quidem
+                    quam reiciendis porro iusto. Veniam, repudiandae officia!
+                  </p>
+                  <div class="project__description--links">
+                    <a href="https://www.github.com/yourlink" target="_blank" class="project__description--link">
+                        <i class="fab fa-github"></i>
+                    </a>
+                    <a href="https://www.google.com" class="project__description--link">
+                        <i class="fas fa-link"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img
+                  src="./assets/loopit.png"
+                  class="project__img"
+                  alt="Car sales project"
+                />
+                <div class="project__description">
+                  <h3 class="project__description--title">Dashboard</h3>
+                  <h4 class="project__description--sub-title">
+                    Html, Css, Javascript, Vue, Vuex
+                  </h4>
+                  <p class="project__description--para">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Laboriosam aliquam dolores nesciunt deleniti, vel est
+                    necessitatibus quas eligendi modi similique earum in quidem
+                    quam reiciendis porro iusto. Veniam, repudiandae officia!
+                  </p>
+                  <div class="project__description--links">
+                    <a href="https://www.github.com/yourlink" target="_blank" class="project__description--link">
+                        <i class="fab fa-github"></i>
+                    </a>
+                    <a href="https://www.google.com" class="project__description--link">
+                        <i class="fas fa-link"></i>
                     </a>
                   </div>
                 </div>
