Finised Project section

--- a/index.html
+++ b/index.html
@@ -212,12 +212,12 @@
             <li class="project">
               <div class="project__wrapper">
                 <img
-                  src="./assets/loopit.png"
+                  src="./assets/iPhone 12 Pro Max 2.png"
                   class="project__img"
                   alt="Car sales project"
                 />
                 <div class="project__description">
-                  <h3 class="project__description--title">Car sales project</h3>
+                  <h3 class="project__description--title">Food App</h3>
                   <h4 class="project__description--sub-title">
                     Html, Css, Javascript, Vue, Vuex
                   </h4>
@@ -241,7 +241,7 @@
             <li class="project">
               <div class="project__wrapper">
                 <img
-                  src="./assets/loopit.png"
+                  src="./assets/dashboard.png"
                   class="project__img"
                   alt="Car sales project"
                 />
@@ -271,5 +271,21 @@
         </div>
       </div>
     </section>
+    <footer>
+      <div class="row footer__row">
+        <a href="#">
+          <figure>
+            <img src="./assets/logo.svg" class="footer__logo--img" alt="">
+          </figure>
+        </a>
+        <div class="footer__social--list">
+          <a href="" class="
+          footer__social--link
+          link__hover-effect
+          link__hover-effect--white
+          " target="_blank"></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
