--- a/index.html
+++ b/index.html
@@ -283,7 +283,12 @@
           footer__social--link
           link__hover-effect
           link__hover-effect--white
-          " target="_blank"></a>
+          " target="_blank">Github</a>
+          <a href="" class="
+          footer__social--link
+          link__hover-effect
+          link__hover-effect--white
+          " target="_blank">LinkedIn</a>
         </div>
       </div>
     </footer>
