--- a/index.html
+++ b/index.html
@@ -289,7 +289,18 @@
           link__hover-effect
           link__hover-effect--white
           " target="_blank">LinkedIn</a>
+          <a href="mailto:nikhilpahan02@gmail.com" class="
+          footer__social--link
+          link__hover-effect
+          link__hover-effect--white
+          " target="_blank">Email</a>
+          <a href="./assets/Example Resume.pdf" class="
+          footer__social--link
+          link__hover-effect
+          link__hover-effect--white
+          " target="_blank">Resume</a>
         </div>
+        <div class="footer__copyright">copyright c 2023 Nikhil Pahan</div>
       </div>
     </footer>
   </body>
