--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
     <footer>
       <div class="row footer__row">
         <a href="#">
-          <figure>
+          <figure class="footer__logo">
             <img src="./assets/logo.svg" class="footer__logo--img" alt="">
           </figure>
         </a>
