desktop version completed

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
           <li>
             <a
               href=""
-              class="nav__link--anchor link__hover-effect link__hover--black"
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
               >Languages</a
             >
           </li>
           <li>
             <a
               href=""
-              class="nav__link--anchor link__hover-effect link__hover--black"
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
               >Projects</a
             >
           </li>
@@ -270,13 +270,17 @@
           </ul>
         </div>
       </div>
-    </section>
+    </section>l
     <footer>
       <div class="row footer__row">
-        <a href="#">
+        <a href="#" class="footer__anchor">
           <figure class="footer__logo">
             <img src="./assets/logo.svg" class="footer__logo--img" alt="">
           </figure>
+          <span class="footer__logo--popper">
+            Top
+            <i class="fas fa-arrow-up"></i>
+          </span>
         </a>
         <div class="footer__social--list">
           <a href="" class="
