Starting Project section

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
           link__hover-effect--white
           " target="_blank">Resume</a>
         </div>
-        <div class="footer__copyright">copyright c 2023 Nikhil Pahan</div>
+        <div class="footer__copyright">copyright © 2023 Nikhil Pahan</div>
       </div>
     </footer>
   </body>
