--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
       <nav>
         <div class="personal__logo">NP</div>
         <ul class="nav__link--list">
-          <li>
+          <li class="nav__link">
             <a
               href=""
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
               >Languages</a
             >
           </li>
-          <li>
+          <li class="nav__link">
             <a
               href=""
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
               >Projects</a
             >
           </li>
-          <li>
+          <li class="nav__link">
             <a href="" class="nav__link--anchor nav__link--anchor-primary"
               >Contact</a
             >
@@ -199,11 +199,18 @@
                     quam reiciendis porro iusto. Veniam, repudiandae officia!
                   </p>
                   <div class="project__description--links">
-                    <a href="https://www.github.com/yourlink" target="_blank" class="project__description--link">
-                        <i class="fab fa-github"></i>
+                    <a
+                      href="https://www.github.com/yourlink"
+                      target="_blank"
+                      class="project__description--link"
+                    >
+                      <i class="fab fa-github"></i>
                     </a>
-                    <a href="https://www.google.com" class="project__description--link">
-                        <i class="fas fa-link"></i>
+                    <a
+                      href="https://www.google.com"
+                      class="project__description--link"
+                    >
+                      <i class="fas fa-link"></i>
                     </a>
                   </div>
                 </div>
@@ -228,11 +235,18 @@
                     quam reiciendis porro iusto. Veniam, repudiandae officia!
                   </p>
                   <div class="project__description--links">
-                    <a href="https://www.github.com/yourlink" target="_blank" class="project__description--link">
-                        <i class="fab fa-github"></i>
+                    <a
+                      href="https://www.github.com/yourlink"
+                      target="_blank"
+                      class="project__description--link"
+                    >
+                      <i class="fab fa-github"></i>
                     </a>
-                    <a href="https://www.google.com" class="project__description--link">
-                        <i class="fas fa-link"></i>
+                    <a
+                      href="https://www.google.com"
+                      class="project__description--link"
+                    >
+                      <i class="fas fa-link"></i>
                     </a>
                   </div>
                 </div>
@@ -257,11 +271,18 @@
                     quam reiciendis porro iusto. Veniam, repudiandae officia!
                   </p>
                   <div class="project__description--links">
-                    <a href="https://www.github.com/yourlink" target="_blank" class="project__description--link">
-                        <i class="fab fa-github"></i>
+                    <a
+                      href="https://www.github.com/yourlink"
+                      target="_blank"
+                      class="project__description--link"
+                    >
+                      <i class="fab fa-github"></i>
                     </a>
-                    <a href="https://www.google.com" class="project__description--link">
-                        <i class="fas fa-link"></i>
+                    <a
+                      href="https://www.google.com"
+                      class="project__description--link"
+                    >
+                      <i class="fas fa-link"></i>
                     </a>
                   </div>
                 </div>
@@ -270,12 +291,13 @@
           </ul>
         </div>
       </div>
-    </section>l
+    </section>
+    l
     <footer>
       <div class="row footer__row">
         <a href="#" class="footer__anchor">
           <figure class="footer__logo">
-            <img src="./assets/logo.svg" class="footer__logo--img" alt="">
+            <img src="./assets/logo.svg" class="footer__logo--img" alt="" />
           </figure>
           <span class="footer__logo--popper">
             Top
@@ -283,26 +305,30 @@
           </span>
         </a>
         <div class="footer__social--list">
-          <a href="" class="
-          footer__social--link
-          link__hover-effect
-          link__hover-effect--white
-          " target="_blank">Github</a>
-          <a href="" class="
-          footer__social--link
-          link__hover-effect
-          link__hover-effect--white
-          " target="_blank">LinkedIn</a>
-          <a href="mailto:nikhilpahan02@gmail.com" class="
-          footer__social--link
-          link__hover-effect
-          link__hover-effect--white
-          " target="_blank">Email</a>
-          <a href="./assets/Example Resume.pdf" class="
-          footer__social--link
-          link__hover-effect
-          link__hover-effect--white
-          " target="_blank">Resume</a>
+          <a
+            href=""
+            class="footer__social--link link__hover-effect link__hover-effect--white"
+            target="_blank"
+            >Github</a
+          >
+          <a
+            href=""
+            class="footer__social--link link__hover-effect link__hover-effect--white"
+            target="_blank"
+            >LinkedIn</a
+          >
+          <a
+            href="mailto:nikhilpahan02@gmail.com"
+            class="footer__social--link link__hover-effect link__hover-effect--white"
+            target="_blank"
+            >Email</a
+          >
+          <a
+            href="./assets/Example Resume.pdf"
+            class="footer__social--link link__hover-effect link__hover-effect--white"
+            target="_blank"
+            >Resume</a
+          >
         </div>
         <div class="footer__copyright">copyright © 2023 Nikhil Pahan</div>
       </div>
