Adding Animation to title

--- a/index.html
+++ b/index.html
@@ -193,10 +193,9 @@
                     Html, Css, Javascript, Vue, Vuex
                   </h4>
                   <p class="project__description--para">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Laboriosam aliquam dolores nesciunt deleniti, vel est
-                    necessitatibus quas eligendi modi similique earum in quidem
-                    quam reiciendis porro iusto. Veniam, repudiandae officia!
+                    A car subscription app offers monthly car rental with options to swap vehicles and includes insurance, 
+                    maintenance, and roadside assistance. 
+                    It's a flexible and hassle-free alternative to traditional car ownership.
                   </p>
                   <div class="project__description--links">
                     <a
