--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
         <ul class="nav__link--list">
           <li class="nav__link">
             <a
-              href=""
+              href="#languages"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
               >Languages</a
             >
           </li>
           <li class="nav__link">
             <a
-              href=""
+              href="#projects"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
               >Projects</a
             >
           </li>
           <li class="nav__link">
-            <a href="" class="nav__link--anchor nav__link--anchor-primary"
+            <a href="mailto:nikhilpahan02@gmail.com" class="nav__link--anchor nav__link--anchor-primary"
               >Contact</a
             >
           </li>
@@ -48,7 +48,7 @@
               />
             </figure>
             <h1 class="about-me__info--title">
-              Hey! I'm <span class="text--purple">Nikhil Pahan</span> 👋
+              Hey! I'm <span class="text--purple">Nikhil Pahan</span>&nbsp;<span class="wave">👋</span>
             </h1>
             <p class="about-me__info--para">
               I'm a
@@ -67,7 +67,7 @@
               <a href="" class="about-me__link">
                 <i class="far fa-envelope"></i>
               </a>
-              <a href="" class="about-me__link">
+              <a href="./assets/Example Resume.pdf" target="_blank" class="about-me__link">
                 <i class="fas fa-file-pdf"></i>
               </a>
             </div>
